--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
       "vite-plugin-pages/client",
       "vite-plugin-vue-layouts/client"
     ],
+
     "paths": {
-      "~/*": ["src/*"]
+      "@/*": ["src/*"]
     }
   },
   "exclude": ["dist", "node_modules"]
