--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/vue": "^4.0.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
@@ -19,7 +20,6 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-pages": "^0.28.0",
-    "vite-plugin-vue-layouts": "^0.7.0",
     "vue-tsc": "^1.0.11"
   }
 }
