Complete header row css and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
 
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@axios": ["src/axios.config.ts"]
     }
   },
   "exclude": ["dist", "node_modules"]
