--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.0.2",
+    "@types/axios": "^0.14.0",
+    "@vueuse/core": "^9.10.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
